--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ nav button span {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #242f3f;
+    background-color: #0a192f;
     display:flex;
     justify-content: center;
     align-items: center;
